新增加 jdbc datasource 包 去掉启动springboot 寻找数据库连接配置 修改默认 rememberme 仓库为 memory

--- a/springboot-security/springboot-security-core/pom.xml
+++ b/springboot-security/springboot-security-core/pom.xml
@@ -38,11 +38,16 @@
 			<artifactId>easy-captcha</artifactId>
 			<version>1.6.2</version>
 		</dependency>
-		
-		<!--  web引用 -->
+
+		<!-- web引用 -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
 	</dependencies>
 
