自定义qq 授权登录

--- a/springboot-security/springboot-security-core/pom.xml
+++ b/springboot-security/springboot-security-core/pom.xml
@@ -49,6 +49,11 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
+		<!-- social  第三方登录用 -->
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-core</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
