--- a/springboot-security/springboot-security-core/pom.xml
+++ b/springboot-security/springboot-security-core/pom.xml
@@ -49,11 +49,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
 		</dependency>
-		<!-- social  第三方登录用 -->
+		<!-- social 第三方登录用 -->
 		<dependency>
 			<groupId>org.springframework.social</groupId>
 			<artifactId>spring-social-core</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.social/spring-social-config -->
+		<dependency>
+			<groupId>org.springframework.social</groupId>
+			<artifactId>spring-social-config</artifactId>
+		</dependency>
+
 	</dependencies>
 
 </project>
